Large update, Created rest of pages, moved authentication and authorization to nice to have since no one will have access to it outside of. Finished styling the menu but could not figure out the news ticker. Added weather functionality and temperature and time elements. fixed the edit column value issue

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/verhoefd1/CPDirectory/issues"
   },
-  "homepage": "https://github.com/verhoefd1/CPDirectory#readme"
+  "homepage": "https://github.com/verhoefd1/CPDirectory#readme",
+  "dependencies": {
+    "request": "^2.86.0"
+  }
 }
