--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/verhoefd1/CPDirectory#readme",
   "dependencies": {
-    "request": "^2.86.0"
+    "request": "^2.86.0",
+    "router": "^1.3.2"
   }
 }
