--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "cpdirectory",
   "version": "1.0.0",
-  "description": "Directory upgrade at CP",
+  "description": "A web application for static and interactive directories",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test": "echo \"Error: no test specified\" && exit 1"
     "start": "node app.js"
   },
   "repository": {
@@ -29,14 +28,6 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.0",
     "request": "^2.87.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "flash": "^1.1.0",
-    "method-override": "^2.3.10",
-    "mongoose": "^5.1.1",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "request": "^2.86.0",
     "router": "^1.3.2"
   }
 }
