--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cpdirectory",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.10.0",
+    "npm" : "3.5.2"
+  },
   "description": "A web application for static and interactive directories",
   "main": "app.js",
   "scripts": {
@@ -19,7 +23,7 @@
   "homepage": "https://github.com/verhoefd1/CPDirectory#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3",
+    "express": "^4.16.2",
     "flash": "^1.1.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.1.4",
