Updated Json with correct Mongoose Version

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "flash": "^1.1.0",
+    "forever": "^0.15.3",
     "method-override": "^2.3.10",
     "mongodb": "^3.0.8",
-    "mongoose": "^4.0.0",
+    "mongoose": "^4.0.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "request": "^2.86.0",
